--- a/mod14_aula3/src/main/resources/application.properties
+++ b/mod14_aula3/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=mod14aula3
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
